--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -24,6 +24,7 @@
     "express": "4.16.3",
     "jest": "23.4.1",
     "react": "16.4.1",
+    "react-dom": "16.4.1",
     "request-promise": "4.2.2",
     "typescript": "2.9.2"
   },
