--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "cross-env": "5.2.0",
         "husky": "0.14.3",
         "lint-staged": "7.2.0",
+        "tslint": "5.11.0",
         "typescript": "2.9.2"
     },
     "lint-staged": {
