Fix travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
     - yarn install
 
 script:
-    - cd - && cd packages/fleur
+    - cd packages/fleur
     - yarn prepublishOnly
     - yarn test --coverage --verbose
 
