--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ragg/fleur-react",
   "version": "0.0.1",
+  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-react",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
   "author": "ragg<ragg.devpr@gmail.com>",
