--- a/packages/fleur-route-store/package.json
+++ b/packages/fleur-route-store/package.json
@@ -2,6 +2,7 @@
   "name": "@ragg/fleur-route-store",
   "version": "0.0.1",
   "description": "Router for fleur",
+  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-route-store",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
   "author": "Ragg<ragg.devpr@gmail.com>",
