--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -16,12 +16,13 @@
   },
   "devDependencies": {
     "@types/cheerio": "0.22.8",
+    "@types/enzyme": "3.1.12",
     "@types/express": "4.16.0",
     "@types/react": "16.4.7",
     "@types/request-promise": "4.1.42",
     "cheerio": "1.0.0-rc.2",
     "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme-adapter-react-16": "npm:enzyme-react-adapter-future",
     "express": "4.16.3",
     "jest": "23.4.1",
     "react": "16.4.1",
