--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -18,6 +18,7 @@
     "@types/cheerio": "0.22.8",
     "@types/enzyme": "3.1.12",
     "@types/express": "4.16.0",
+    "@types/jest": "23.3.1",
     "@types/react": "16.4.7",
     "@types/request-promise": "4.1.42",
     "cheerio": "1.0.0-rc.2",
