--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ragg/fleur-react",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-react",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
@@ -28,8 +28,7 @@
     "jest": "23.4.1",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "request-promise": "4.2.2",
-    "typescript": "2.9.2"
+    "request-promise": "4.2.2"
   },
   "sideEffects": false
 }
