--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -28,7 +28,8 @@
     "jest": "23.4.1",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "request-promise": "4.2.2"
+    "request-promise": "4.2.2",
+    "ts-jest": "23.1.4"
   },
   "sideEffects": false
 }
