--- a/packages/fleur/package.json
+++ b/packages/fleur/package.json
@@ -18,9 +18,7 @@
     "eventemitter3": "3.1.0",
     "jest": "23.4.1",
     "ts-jest": "23.0.1",
-    "ts-loader": "4.4.2",
-    "typescript": "2.9.2",
-    "webpack": "4.16.2"
+    "typescript": "2.9.2"
   },
   "dependencies": {
     "immer": "1.5.0",
