--- a/packages/fleur-ssr-example/tsconfig.json
+++ b/packages/fleur-ssr-example/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "es2015",
         "module": "commonjs",
         "moduleResolution": "node",
+        "jsx": "react",
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitAny": true,
@@ -11,13 +12,15 @@
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
         "lib": [
-            "dom",
             "es2015",
             "es2016",
             "es2017"
         ],
         "outDir": "dist",
     },
+    "files": [
+        "src/index.ts"
+    ],
     "exclude": [
         "src/**/*.spec.ts",
         "test_lib/"
