--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -22,8 +22,8 @@
     "@types/react": "16.4.18",
     "@types/request-promise": "4.1.42",
     "cheerio": "1.0.0-rc.2",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "npm:enzyme-react-adapter-future",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.6.0",
     "express": "4.16.4",
     "jest": "23.6.0",
     "react": "16.5.2",
