--- a/packages/fleur-benchmarks/tsconfig.json
+++ b/packages/fleur-benchmarks/tsconfig.json
@@ -12,6 +12,7 @@
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
         "lib": [
+            "dom",
             "es2015",
             "es2016",
             "es2017"
