--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "cross-env": "5.2.0",
         "husky": "0.14.3",
         "lint-staged": "7.2.0",
+        "prettier": "1.15.3",
         "tslint": "5.11.0",
+        "tslint-config-prettier": "1.17.0",
         "typescript": "3.0.1"
     },
     "lint-staged": {
