Enable prettier to precommit

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint-staged": {
         "*.{ts,tsx}": [
             "tslint --fix",
+            "prettier --write",
             "git add"
         ]
     }
