--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
     "workspaces": [
         "packages/*"
     ],
-    "scripts": {
-        "precommit": "lint-staged"
-    },
     "devDependencies": {
         "cross-env": "5.2.0",
-        "husky": "0.14.3",
-        "lint-staged": "7.2.0",
+        "husky": "1.2.0",
+        "lint-staged": "8.1.0",
         "prettier": "1.15.3",
         "tslint": "5.11.0",
         "tslint-config-prettier": "1.17.0",
         "typescript": "3.0.1"
+    },
+    "husky": {
+        "hooks": {
+          "pre-commit": "lint-staged"
+        }
     },
     "lint-staged": {
         "*.{ts,tsx}": [
