--- a/.travis.yml
+++ b/.travis.yml
@@ -2,29 +2,33 @@ sudo: false
 language: node_js
 
 cache:
-    yarn: true
-    directories:
-        - node_modules
+  yarn: true
+  directories:
+    - node_modules
 
 node_js:
-    - '10'
+  - '10'
 
 install:
-    - npm i -g yarn
-    - yarn install
+  - npm i -g yarn
+  - yarn install
 
 script:
-    - cd packages/fleur
-    - yarn prepublishOnly
-    - yarn test --coverage --verbose
+  - cd packages/fleur
+  - yarn prepublishOnly
+  - yarn test --coverage --verbose
 
-    - cd - && cd packages/fleur-react
-    - yarn prepublishOnly
-    - yarn test --coverage --verbose
+  - cd - && cd packages/fleur-di
+  - yarn prepublishOnly
+  - yarn test --coverage --verbose
 
-    - cd - && cd packages/fleur-route-store
-    - yarn prepublishOnly
-    - yarn test --coverage --verbose
+  - cd - && cd packages/fleur-react
+  - yarn prepublishOnly
+  - yarn test --coverage --verbose
 
-    - cd - && cd packages/fleur-benchmarks
-    - yarn test
+  - cd - && cd packages/fleur-route-store
+  - yarn prepublishOnly
+  - yarn test --coverage --verbose
+
+  - cd - && cd packages/fleur-benchmarks
+  - yarn test
