--- a/packages/fleur-route-store-dom/package.json
+++ b/packages/fleur-route-store-dom/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@ragg/fleur-route-store",
+  "name": "@ragg/fleur-route-store-dom",
   "version": "0.0.1",
   "description": "Router for fleur",
-  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-route-store",
+  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-route-store-dom",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
   "author": "Ragg<ragg.devpr@gmail.com>",
