--- a/packages/fleur-route-store-dom/package.json
+++ b/packages/fleur-route-store-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ragg/fleur-route-store-dom",
-  "version": "0.0.1",
+  "version": "0.0.1-pre",
   "description": "Router for fleur",
   "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-route-store-dom",
   "main": "lib/index.js",
