--- a/packages/fleur-route-store-dom/package.json
+++ b/packages/fleur-route-store-dom/package.json
@@ -11,8 +11,11 @@
     "test": "jest",
     "prepublishOnly": "rm -rf typings && tsc --emitDeclarationOnly --declaration --outDir ./typings && tsc --outDir lib"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@ragg/fleur": "*",
+    "@ragg/fleur-react": "*"
+  },
+  "dependencies": {
     "history": "4.7.2",
     "lodash": "4.17.11",
     "path-to-regexp": "2.4.0"
