--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -19,15 +19,17 @@
     "@types/enzyme": "3.1.14",
     "@types/express": "4.16.0",
     "@types/jest": "23.3.5",
-    "@types/react": "16.7.13",
+    "@types/react": "16.7.20",
+    "@types/react-test-renderer": "16.0.3",
     "@types/request-promise": "4.1.42",
     "cheerio": "1.0.0-rc.2",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.6.0",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.7.1",
     "express": "4.16.4",
     "jest": "23.6.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
+    "react": "16.8.0-alpha.1",
+    "react-dom": "16.7.0",
+    "react-test-renderer": "16.8.0-alpha.1",
     "request-promise": "4.2.2",
     "ts-jest": "23.10.4"
   },
