--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -28,7 +28,8 @@
     "react-dom": "16.7.0",
     "react-test-renderer": "16.8.0-alpha.1",
     "request-promise": "4.2.2",
-    "ts-jest": "23.10.4"
+    "ts-jest": "23.10.4",
+    "typescript": "3.4.5"
   },
   "sideEffects": false
 }
