--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -24,9 +24,9 @@
     "cheerio": "1.0.0-rc.2",
     "express": "4.16.4",
     "jest": "23.6.0",
-    "react": "16.8.0-alpha.1",
-    "react-dom": "16.7.0",
-    "react-test-renderer": "16.8.0-alpha.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-test-renderer": "16.8.6",
     "request-promise": "4.2.2",
     "ts-jest": "23.10.4",
     "typescript": "3.4.5"
