--- a/packages/fleur-react/package.json
+++ b/packages/fleur-react/package.json
@@ -26,6 +26,7 @@
     "jest": "24.8.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-hooks-testing-library": "0.5.0",
     "react-test-renderer": "16.8.6",
     "request-promise": "4.2.2",
     "ts-jest": "23.10.4",
