--- a/packages/fleur-benchmarks/package.json
+++ b/packages/fleur-benchmarks/package.json
@@ -7,7 +7,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "24.8.0"
+    "@types/react-dom": "16.8.4",
+    "jest": "24.8.0",
+    "react-dom": "16.8.6"
   },
   "dependencies": {
     "fluxible": "^1.4.0",
