--- a/packages/fleur/package.json
+++ b/packages/fleur/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ragg/fleur",
-  "version": "0.0.13-pre.1",
+  "version": "0.0.13",
   "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
