Add react-redux benchmark

--- a/packages/fleur-benchmarks/package.json
+++ b/packages/fleur-benchmarks/package.json
@@ -8,8 +8,12 @@
   },
   "devDependencies": {
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "7.0.9",
+    "@types/redux": "3.6.0",
     "jest": "24.8.0",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-redux": "7.0.3",
+    "redux": "4.0.1"
   },
   "dependencies": {
     "fluxible": "^1.4.0",
