--- a/packages/fleur-route-store-dom/tsconfig.json
+++ b/packages/fleur-route-store-dom/tsconfig.json
@@ -10,6 +10,8 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "outDir": "dist"
