--- a/packages/fleur-route-store-dom/package.json
+++ b/packages/fleur-route-store-dom/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "fast-deep-equal": "^2.0.1",
     "history": "^4.9.0",
+    "invariant": "^2.2.4",
     "path-to-regexp": "^2.4.0"
   },
   "devDependencies": {
     "@types/history": "4.7.2",
+    "@types/invariant": "2.2.29",
     "jest": "24.8.0",
     "react-hooks-testing-library": "0.5.0",
     "ts-jest": "23.1.4",
