--- a/packages/route-store-dom/package.json
+++ b/packages/route-store-dom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ragg/fleur-route-store-dom",
+  "name": "@fleur/route-store-dom",
   "version": "1.0.0",
   "description": "Router for fleur",
   "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-route-store-dom",
