--- a/packages/route-store-dom/package.json
+++ b/packages/route-store-dom/package.json
@@ -24,8 +24,10 @@
   "devDependencies": {
     "@types/history": "4.7.2",
     "@types/invariant": "2.2.29",
+    "@types/react-test-renderer": "16.8.1",
     "jest": "24.8.0",
     "react-hooks-testing-library": "0.5.0",
+    "react-test-renderer": "16.8.6",
     "ts-jest": "23.1.4",
     "typescript": "3.4.5"
   },
