--- a/packages/fleur/package.json
+++ b/packages/fleur/package.json
@@ -12,10 +12,15 @@
   },
   "devDependencies": {
     "@types/invariant": "2.2.29",
-    "cache-loader": "1.2.2",
+    "cache-loader": "4.0.1",
+    "husky": "2.7.0",
     "jest": "24.8.0",
-    "ts-jest": "23.10.4",
-    "typescript": "3.4.5"
+    "lint-staged": "8.2.1",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.2",
+    "tslint": "5.18.0",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "3.5.2"
   },
   "dependencies": {
     "immer": "^1.8.0",
