--- a/packages/route-store-dom/package.json
+++ b/packages/route-store-dom/package.json
@@ -22,11 +22,11 @@
     "path-to-regexp": "^3.0.0"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^1.1.0",
     "@types/history": "4.7.2",
     "@types/invariant": "2.2.30",
     "@types/react-test-renderer": "16.9.0",
     "jest": "24.8.0",
-    "react-hooks-testing-library": "0.6.0",
     "react-test-renderer": "16.9.0",
     "ts-jest": "24.0.2",
     "typescript": "3.5.3"
