--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   - yarn prepublishOnly
   - yarn test --coverage --verbose
 
-  - cd - && cd packages/test-utils
+  - cd - && cd packages/testings
   - yarn prepublishOnly
   - yarn test --coverage --verbose
 
