--- a/packages/create-fleur-next-app/package.json
+++ b/packages/create-fleur-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-fleur-next-app",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Next.js app generator with Fleur",
   "main": "index.js",
   "repository": "https://github.com/ra-gg/fleur/tree/master/packages/create-fleur-next-app",
@@ -9,7 +9,18 @@
   "bin": {
     "create-fleur-next-app": "bin/index.js"
   },
+  "scripts": {
+    "build": "ncc build src/index.ts -o bin",
+    "prepublishOnly": "ncc build src/index.ts -o ./bin --minify --no-cache --no-source-map-register"
+  },
   "devDependencies": {
+    "@zeit/ncc": "^0.20.4",
     "next": "^9.0.5"
+  },
+  "dependencies": {
+    "chalk": "2.4.2",
+    "commander": "3.0.0",
+    "cpy": "7.3.0",
+    "validate-npm-package-name": "3.0.0"
   }
 }
