--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,18 +1,15 @@
 {
   "name": "@fleur/next",
-  "version": "1.1.2",
-  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur",
+  "version": "0.1.0",
+  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/next",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
-  "author": "Ragg<ragg.devpr@gmail.com>",
+  "author": "Mitsuka Hanakura<ragg.devpr@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prepublishOnly": "rm -rf ./{typings,lib} && tsc --emitDeclarationOnly --declaration --outDir ./typings && tsc --outDir lib",
-    "test": "jest --verbose"
+    "prepublishOnly": "rm -rf ./{typings,lib} && tsc --emitDeclarationOnly --declaration --outDir ./typings && tsc --outDir lib"
   },
   "devDependencies": {
-    "jest": "24.9.0",
-    "ts-jest": "24.0.2",
     "typescript": "3.5.3"
   },
   "dependencies": {
