--- a/packages/create-fleur-next-app/template/package.json
+++ b/packages/create-fleur-next-app/template/package.json
@@ -11,6 +11,8 @@
     "@fleur/fleur": "^1.1.2",
     "@fleur/fleur-react": "^1.0.1",
     "@fleur/next": "^0.1.0-alpha",
-    "next": "^9.0.5"
+    "next": "^9.0.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
