Ready to release

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/next",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "repository": "https://github.com/ra-gg/fleur/tree/master/packages/next",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
