--- a/packages/create-fleur-next-app/package.json
+++ b/packages/create-fleur-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-fleur-next-app",
-  "version": "0.1.0-alpha.4",
+  "version": "0.1.0",
   "description": "Next.js app generator with Fleur",
   "main": "index.js",
   "repository": "https://github.com/ra-gg/fleur/tree/master/packages/create-fleur-next-app",
@@ -14,8 +14,7 @@
     "prepublishOnly": "ncc build src/index.ts -o ./bin --minify --no-cache --no-source-map-register"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.20.4",
-    "next": "^9.0.5"
+    "@zeit/ncc": "^0.20.4"
   },
   "dependencies": {
     "chalk": "2.4.2",
