--- a/packages/example-todomvc/package.json
+++ b/packages/example-todomvc/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@fleur/fleur": "*",
-    "@fleur/fleur-react": "*",
+    "@fleur/react": "*",
     "@fleur/route-store-dom": "*",
     "axios": "0.19.0",
     "classnames": "^2.1.5",
