--- a/packages/fleur/package.json
+++ b/packages/fleur/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fleur/fleur",
-  "version": "1.1.2",
-  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur",
+  "version": "2.0.0",
+  "repository": "https://github.com/ra-gg/fleur/tree/master/packages/fleur",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
   "author": "Ragg<ragg.devpr@gmail.com>",
