--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fleur/fleur-react",
+  "name": "@fleur/react",
   "version": "2.0.0",
-  "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur-react",
+  "repository": "https://github.com/ra-gg/fleur/tree/master/packages/react",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
   "author": "ragg<ragg.devpr@gmail.com>",
