--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/react",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0",
   "repository": "https://github.com/ra-gg/fleur/tree/master/packages/react",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
