[react / route-store-dom / create-fleur-next-app] Bump up version

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/react",
-  "version": "2.0.0",
+  "version": "3.0.0-pre",
   "repository": "https://github.com/ra-gg/fleur/tree/master/packages/react",
   "main": "lib/index.js",
   "types": "typings/index.d.ts",
