--- a/packages/fleur/package.json
+++ b/packages/fleur/package.json
@@ -2,12 +2,13 @@
   "name": "@fleur/fleur",
   "version": "1.2.3",
   "homepage": "https://github.com/ra-gg/fleur/tree/master/packages/fleur",
-  "main": "lib/index.js",
-  "types": "typings/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "author": "Ragg<ragg.devpr@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prepublishOnly": "rm -rf ./{typings,lib} && tsc --emitDeclarationOnly --declaration --outDir ./typings && tsc --outDir lib",
+    "prepublishOnly": "rm -rf ./dist && bili",
     "test": "jest --verbose"
   },
   "devDependencies": {
@@ -16,7 +17,9 @@
     "jest": "24.9.0",
     "lint-staged": "9.4.2",
     "prettier": "1.18.2",
+    "rollup-plugin-typescript2": "0.25.2",
     "ts-jest": "24.1.0",
+    "tslib": "1.10.0",
     "tslint": "5.20.0",
     "tslint-config-prettier": "1.18.0",
     "typescript": "3.6.4"
