--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -14,6 +14,6 @@
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "outDir": "dist"
   },
-  "files": ["src/index.ts"],
+  "files": ["src/index.ts", "src/utils/batchedUpdates.native.ts"],
   "exclude": ["node_modules"]
 }
