--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,7 +12,7 @@
     "clean-dist": "rm -rf ./dist",
     "build:declarations": "tsc --emitDeclarationOnly --declaration --outDir ./dist",
     "build:esm": "bili",
-    "build:commonjs": "tsc --outDir ./dist",
+    "build:commonjs": "tsc -m commonjs --outDir ./dist",
     "build": "yarn build:declarations && yarn build:esm && yarn build:commonjs",
     "prepublishOnly": "yarn clean-dist && yarn build"
   },
