--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/next",
   "main": "lib/index.js",
-  "types": "typings/index.d.ts",
+  "types": "lib/index.d.ts",
   "author": "Mitsuka Hanakura<ragg.devpr@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prepublishOnly": "rm -rf ./{typings,lib} && tsc --emitDeclarationOnly --declaration --outDir ./typings && tsc --outDir lib"
+    "prepublishOnly": "rm -rf ./lib && tsc --emitDeclarationOnly --declaration --outDir ./lib && tsc --outDir lib"
   },
   "devDependencies": {
+    "@types/serialize-javascript": "1.5.0",
     "next": "^9.1.6",
     "typescript": "3.7.4"
   },
@@ -17,7 +18,8 @@
     "next": "^9.1.6"
   },
   "dependencies": {
-    "@fleur/fleur": "^1.1.0"
+    "@fleur/fleur": "^1.1.0",
+    "serialize-javascript": "2.1.2"
   },
   "sideEffects": false
 }
