--- a/packages/create-fleur-next-app/package.json
+++ b/packages/create-fleur-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-fleur-next-app",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Next.js app generator with Fleur",
   "main": "index.js",
   "repository": "https://github.com/ra-gg/fleur/tree/master/packages/create-fleur-next-app",
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "ncc build src/index.ts -o bin",
+    "example": "ts-node -T src/index.ts example",
     "prepublishOnly": "ncc build src/index.ts -o ./bin --minify --no-cache --no-source-map-register"
   },
   "devDependencies": {
