--- a/packages/create-fleur-next-app/tsconfig.json
+++ b/packages/create-fleur-next-app/tsconfig.json
@@ -16,5 +16,6 @@
     "lib": ["es2015", "es2016", "es2017"],
     "outDir": "dist"
   },
+  "include": ["./src"],
   "exclude": ["./template", "./app"]
 }
