--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,10 @@ script:
   - yarn prepublishOnly
   - yarn test --coverage --verbose
 
+  - cd - && cd packages/jest
+  - yarn prepublishOnly
+  - yarn test --verbose
+
   - cd - && cd packages/create-fleur-next-app
   - yarn prepublishOnly
   - node ./bin/index test-app
