--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,34 +26,40 @@ jobs:
             ${{ matrix.os }}-
       - name: Install deps
         run: yarn install
-      - name: Testing
+      - name: Testing @fluer/fleur
         run: |
           cd packages/fleur
           yarn prepublishOnly
           yarn test --coverage --verbose
-
+      - name: Testing @fluer/di
+        run: |
           cd - && cd packages/di
           yarn prepublishOnly
           yarn test --coverage --verbose
-
+      - name: Testing @fleur/react
+        run: |
           cd - && cd packages/react
           yarn prepublishOnly
           yarn test --coverage --verbose
-
+      - name: Testing @fleur/route-store-dom
+        run: |
           cd - && cd packages/route-store-dom
           yarn prepublishOnly
           yarn test --coverage --verbose
-
+      - name: Testing @fleur/testing
+        run: |
           cd - && cd packages/testing
           yarn prepublishOnly
           yarn test --coverage --verbose
-
+      - name: Testing create-fleur-next-app
+        run: |
           cd - && cd packages/create-fleur-next-app
           yarn prepublishOnly
           node ./bin/index test-app
-
+      - name: Testing @fleur/next
+        run: |
           cd - && cd packages/next
           yarn prepublishOnly
-
+      - name: Benchmarking
           cd - && cd packages/fleur-benchmarks
           yarn test
