Fix workflow config

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -61,5 +61,6 @@ jobs:
           cd - && cd packages/next
           yarn prepublishOnly
       - name: Benchmarking
+        run: |
           cd - && cd packages/fleur-benchmarks
           yarn test
