--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -56,6 +56,8 @@ jobs:
           cd packages/create-fleur-next-app
           yarn prepublishOnly
           node ./bin/index test-app
+          cd test-app
+          yarn build
       - name: Testing @fleur/next
         run: |
           cd packages/next
