--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -11,6 +11,8 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "outDir": "dist"
   },
