Omit before ES2015 browser to reducing bundle size

--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
       "prettier --write",
       "git add"
     ]
-  }
+  },
+  "browserslist": [
+    "Chrome >= 71",
+    "ios_saf >= 13",
+    "safari >= 13"
+  ]
 }
