--- a/packages/fleur/tsconfig.json
+++ b/packages/fleur/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "target": "es2015",
-    "module": "es2015",
+    "target": "ES2019",
+    "module": "ES2015",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
