--- a/packages/fleur-benchmarks/package.json
+++ b/packages/fleur-benchmarks/package.json
@@ -13,9 +13,10 @@
     "@types/react-redux": "7.1.7",
     "@types/redux": "3.6.0",
     "jest": "25.1.0",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
-    "redux": "4.0.5"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "dependencies": {
     "fluxible": "^1.4.0",
