--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "target": "es2015",
-    "module": "es2015",
+    "target": "ES2016",
+    "module": "ES2015",
     "moduleResolution": "node",
     "jsx": "react",
     "noUnusedLocals": true,
