--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "packages/*"
   ],
   "devDependencies": {
-    "bili": "4.8.1",
+    "@types/jest": "26.0.19",
+    "bili": "5.0.5",
     "cross-env": "7.0.2",
-    "husky": "4.2.5",
-    "lint-staged": "10.0.8",
-    "prettier": "1.19.1",
+    "husky": "4.3.6",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
     "typescript": "4.1.3",
