--- a/packages/fleur/package.json
+++ b/packages/fleur/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/fleur",
-  "version": "2.1.0-beta.1",
+  "version": "3.0.0",
   "homepage": "https://github.com/fleur-js/fleur/tree/master/packages/fleur",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -17,16 +17,8 @@
   },
   "devDependencies": {
     "@types/invariant": "2.2.34",
-    "husky": "4.2.5",
-    "jest": "25.1.0",
-    "lint-staged": "10.0.8",
-    "prettier": "1.19.1",
     "rollup-plugin-typescript2": "0.29.0",
-    "ts-jest": "26.3.0",
-    "tslib": "2.0.1",
-    "tslint": "6.1.3",
-    "tslint-config-prettier": "1.18.0",
-    "typescript": "4.1.3"
+    "tslib": "2.0.1"
   },
   "dependencies": {
     "immer": "^8.0.0",
