--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/react",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/react",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -16,29 +16,25 @@
     "prepublishOnly": "yarn clean-dist && yarn build"
   },
   "peerDependencies": {
-    "@fleur/fleur": "2.x.x",
+    "@fleur/fleur": "3.x.x",
     "react": ">= 16.8.x",
     "react-dom": ">= 16.8.x"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^3.2.1",
+    "@testing-library/react-hooks": "^3.7.0",
     "@types/cheerio": "0.22.16",
     "@types/express": "4.17.1",
-    "@types/jest": "25.1.4",
     "@types/react": "16.9.53",
     "@types/react-test-renderer": "17.0.0",
     "@types/request-promise": "4.1.45",
     "cheerio": "1.0.0-rc.3",
     "express": "4.17.1",
-    "jest": "25.1.0",
     "react": "16.13.0",
     "react-dom": "16.13.1",
     "react-test-renderer": "16.13.1",
     "request-promise": "4.2.5",
     "rollup-plugin-typescript2": "0.29.0",
-    "ts-jest": "25.2.1",
-    "tslib": "1.11.1",
-    "typescript": "3.9.7"
+    "tslib": "1.11.1"
   },
   "sideEffects": false
 }
