--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "husky": "4.3.6",
     "lint-staged": "10.5.3",
     "prettier": "2.2.1",
+    "ts-jest": "26.4.4",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
     "typescript": "4.1.3",
