--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,8 +30,8 @@
     "@types/request-promise": "4.1.47",
     "cheerio": "1.0.0-rc.5",
     "express": "4.17.1",
-    "react": "16.13.0",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-test-renderer": "17.0.1",
     "request-promise": "4.2.5",
     "rollup-plugin-typescript2": "0.29.0",
