--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/next",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/next",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -16,7 +16,7 @@
     "next": "^9.3.2"
   },
   "dependencies": {
-    "@fleur/fleur": "^3.0.0",
+    "@fleur/fleur": "^3.0.0-beta.1",
     "superjson": "^1.4.1"
   },
   "sideEffects": false
