--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,12 +26,12 @@ jobs:
             ${{ matrix.os }}-
       - name: Install deps
         run: yarn install
-      - name: Testing @fluer/fleur
+      - name: Testing @fleur/fleur
         run: |
           cd packages/fleur
           yarn prepublishOnly
           yarn test --coverage --verbose
-      - name: Testing @fluer/di
+      - name: Testing @fleur/di
         run: |
           cd packages/di
           yarn prepublishOnly
