Add bundle size benchmark

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -58,7 +58,11 @@ jobs:
         run: |
           cd packages/next
           yarn prepublishOnly
-      - name: Benchmarking
+      - name: Benchmarking (Performance)
         run: |
           cd packages/fleur-benchmarks
           yarn test
+      - name: Benchmarking (Bundle size)
+        run: |
+          cd packages/fleur-benchmarks
+          yarn build
