--- a/packages/fleur-benchmarks/tsconfig.json
+++ b/packages/fleur-benchmarks/tsconfig.json
@@ -1,25 +1,20 @@
 {
-    "compilerOptions": {
-        "baseUrl": "./src",
-        "target": "es2015",
-        "module": "commonjs",
-        "jsx": "react",
-        "moduleResolution": "node",
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "strictNullChecks": true,
-        "forceConsistentCasingInFileNames": true,
-        "lib": [
-            "dom",
-            "es2015",
-            "es2016",
-            "es2017"
-        ],
-        "outDir": "dist"
-    },
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "target": "ES2019",
+    "module": "commonjs",
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "outDir": "dist"
+  },
+  "exclude": ["node_modules"]
 }
