Update CI config

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,30 +26,27 @@ jobs:
             ${{ matrix.os }}-
       - name: Install deps
         run: yarn install
+      - name: Building packages
+        run: yarn build
       - name: Testing @fleur/fleur
         run: |
           cd packages/fleur
-          yarn prepublishOnly
           yarn test --coverage --verbose
       - name: Testing @fleur/di
         run: |
           cd packages/di
-          yarn prepublishOnly
           yarn test --coverage --verbose
       - name: Testing @fleur/react
         run: |
           cd packages/react
-          yarn prepublishOnly
           yarn test --coverage --verbose
       - name: Testing @fleur/testing
         run: |
           cd packages/testing
-          yarn prepublishOnly
           yarn test --coverage --verbose
       - name: Testing @fleur/create-next-app
         run: |
           cd packages/create-next-app
-          yarn prepublishOnly
           node ./bin/index test-app
           cd test-app
           yarn install
@@ -57,7 +54,6 @@ jobs:
       - name: Testing @fleur/next
         run: |
           cd packages/next
-          yarn prepublishOnly
       - name: Benchmarking (Performance)
         run: |
           cd packages/fleur-benchmarks
