--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "wsrun --exclude-missing -c prepublishOnly"
+    "build": "wsrun -ms -c prepublishOnly"
   },
   "workspaces": [
     "packages/*"
