--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -62,3 +62,7 @@ jobs:
         run: |
           cd packages/fleur-benchmarks
           yarn build
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: ./
