Add some functions for support getServerSideProps😈

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/next",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-dev.2",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/next",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
