--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "7.0.3",
     "husky": "4.3.6",
     "lint-staged": "10.5.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
     "ts-jest": "26.4.4",
     "tslint": "6.1.3",
