--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -15,7 +15,7 @@
     "next": "10.0.4"
   },
   "peerDependencies": {
-    "@fleur/fleur": "^3.0.0-beta.1",
+    "@fleur/fleur": "^3.0.0",
     "next": "^9.3.2"
   },
   "dependencies": {
