--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/react",
-  "version": "5.0.0-beta.1",
+  "version": "5.0.0",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/react",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
