--- a/packages/fleur-benchmarks/package.json
+++ b/packages/fleur-benchmarks/package.json
@@ -21,14 +21,10 @@
     "@reduxjs/toolkit": "^1.5.0",
     "fluxible": "^1.4.0",
     "fluxible-addons-react": "0.2.16",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "*",
+    "react-dom": "*",
     "react-redux": "7.2.2",
     "redux": "4.0.5"
-  },
-  "resolutions": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
   },
   "browserslist": [
     "since 2020"
