--- a/packages/create-next-app/package.json
+++ b/packages/create-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/create-next-app",
-  "version": "0.7.0",
+  "version": "1.0.0-dev.1",
   "description": "Next.js app generator with Fleur",
   "main": "index.js",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/create-fleur-next-app",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "ncc build src/index.ts -o bin",
-    "example": "rm -rf ./example; ts-node -T src/index.ts example",
+    "example": "rm -rf ./test-build; ts-node -T src/index.ts test-build",
     "prepublishOnly": "ncc build src/index.ts -o ./bin --minify --no-cache --no-source-map-register"
   },
   "devDependencies": {
