--- a/packages/create-next-app/package.json
+++ b/packages/create-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleur/create-next-app",
-  "version": "1.0.0",
+  "version": "1.0.0-dev.5",
   "description": "Next.js app generator with Fleur",
   "main": "index.js",
   "repository": "https://github.com/fleur-js/fleur/tree/master/packages/create-fleur-next-app",
@@ -18,7 +18,7 @@
     "@zeit/ncc": "^0.22.3"
   },
   "dependencies": {
-    "chalk": "3.0.0",
+    "chalk": "4.1.0",
     "commander": "7.0.0",
     "cpy": "8.1.1",
     "validate-npm-package-name": "3.0.0"
